further beat changes

--- a/cheetsheet.fountain
+++ b/cheetsheet.fountain
@@ -1,8 +1,8 @@
 
-Title: **cheet sheet**
+Title: **cheat sheet**
  the title will have the full page. no matter the text length.
 
-int. car. day #3# 
+int. car. day #2# 
 [[#1A#, #scene no.# can change scene no.]]
 He fliped the indicator for the left, when he urgerd to play his favorite music.
 
