--- a/Meri tibet yatra.fountain
+++ b/Meri tibet yatra.fountain
@@ -922,7 +922,7 @@ EXT. LAND SLIDE. NIGHT
 
 Gedun is on the watch. He is sipping his tea.
 
-Rahul lies on the small rock. He is in mess, his mind is furious and his stomach is roaring and shoulder is paining. Is trying to sleep.
+Rahul lies on the small rock. He is in mess, his mind is furious and his stomach is roaring and the shoulder is paining. He trying to sleep.
 
 Fenny is sleeping, snoring. His snoring stops.
 
@@ -1098,7 +1098,7 @@ FENNY
 Pta kese lagega ki vo orignal hai.
 
 RAHUL
-Kafi sara padhna pdega, fir ek vakt aayga jab tumhe kuch adhura, gande translation milenge to original dastavag dhunda to pdega he.
+Kafi sara padhna pdega, fir ek vakt aayga jab tumhe kuch adhura, gande translation milenge to original dastavag dhundane to pdenge he.
 
 FENNY
 To iska matlab aapka zinda rhena zaruri hai.
