doc done till we get to know that fenny is not going to live lilong

--- a/Meri tibet yatra.fountain
+++ b/Meri tibet yatra.fountain
@@ -1262,9 +1262,9 @@ She rubs her arms and comes to the water. The men calls her.
 
 Rahul and fenny have no words so to speak.
 
-She joins them. Rahul turns back. They silently take a bath together. The young wife, goes to fenny and asks for the soap. He it to stunned to speak.
+She joins them. Rahul turns back. They silently take a bath together. The young wife, goes to fenny and asks for the soap. He is to stunned to speak.
 
-The naked women, splashes the water on to fenny and rahul. They splashes back. Everything is in slowmo and fenny and rahul holds a intense look on their face.
+The naked women, splashes the water on to fenny and rahul. the sun casting intense shadow on their faces as  They splash back. Everything is in slow-mo and fenny and rahul holds a intense look on their face.
 
 EXT. RIVER SIDE. AFTERNOON
 
@@ -1345,7 +1345,7 @@ FENNY
 To uske bad aap kya kroge.
 
 GEDUN
-Mai, kitabe chapne lagi hai so rupyo ka intzam vha se ho jayga. Darjelling mai ek kamra kiraye pr lunga. Devio se milunga. Bar mai jaunga. Sharab piyunga. Aur duniya khumunga.
+Mai, kitabe chapne lagi hai so rupyo ka intzam vha se ho jayga. Darjelling mai ek kamra kiraye pr lunga. Devio se milunga. Bar mai jaunga. Sharab piyunga. Aur duniya ghumunga.
 
 FENNY
 Shadi se pelhe mera jeevan bhi kuch isi trahe ka tha, magar shadi ke bad ek sudhro ki shyedi mai aa gya mai.
@@ -1385,7 +1385,7 @@ Mujhe kitni taklif ho rhi hai aapke mujhse bat na krne se.
 Gedun laughs.
 
 FILTERED VOICE
-(almost spooky but human) kon ho waha.
+(almost spooky but human) kon hai waha.
 
 The become silent.
 
@@ -1395,12 +1395,12 @@ Maine pucha kon hai vha.
 Rahul and fenny goes to gedun.
 
 RAHUL
-Gedun ji, ke kisi pishach ki se awaj kesi hai.
+Gedun ji, ye kisi pishach ki se awaj kesi hai.
 
 Gedun SUSHES him.
 
 GEDUN
-Ji, hm pilgrims hai. Bas kuch der ka padav lagaya hai.
+Ji, hm dampa hai. Bas kuch der ka padav lagaya hai.
 
 FILTERED VOICE
 Acha, itni rat ko konse tirath prja rhe ho.
@@ -1426,7 +1426,7 @@ Aap kon ho.
 Rahul and fenny are startled.
 
 FILTERED VOICE
-Ham bhi pilgrims hai.
+Ham bhi dampa hai.
 
 GEDUN
 Ham, aap kitne log ho.
@@ -1447,10 +1447,10 @@ Rahul and fenny stay where they are. Gedun accept and closes his eyes resting ag
 
 EXT. A TRAIL OF PILGRIMS. DAY
 
-One men are waking with them. A family rests on the side, leaving the way for the pilgrims.
+Our men are waking with them. A family rest on the side, leaving the way for the pilgrims.
 
 MOTHER
-Lama ji, rakshaso ne dekho kya kra hai mera beta chal nahi pa rha hai dono pair suj rakhe hai.
+Lama ji, rakshaso(mara) ne dekho kya kra hai mera beta chal nahi pa rha hai dono pair suj rakhe hai.
 
 RAHUL
 Kafi der se chadhai kr rha hoga..
@@ -1458,7 +1458,7 @@ Kafi der se chadhai kr rha hoga..
 GEDUN
 Ruko mai dektha hu.
 
-Copy from the book.
+read the book, from the book.
 
 RAHUL
 Kya aapke pas sach mai siddhiya hai. Ki aap aaise ilaaj kr sakte ho.
@@ -1471,7 +1471,7 @@ Kyu aap bar bar bat krne ke koshis krte ho.
 RAHUL
 Kese bhi ho mitar hai hamare.
 
-12. A old couple with goat. Accident???? Copy it.
+12. A old couple with goat. Accident????
 
 The goat hauls downwards with the luggage on her side. Fenny and rahul jumps to catch it but it dodges and sneaks away. Fenny runs to catch it. Rahul follows.
 
@@ -1495,7 +1495,7 @@ OLD MAN
 Saman lakar aur bhaga hai, hata laga na chouduga nahi.
 
 GEDUN
-Aaisa mt karna, copy it from the book.
+Aaisa mt karna, copy it from the book.(for the authentic details for the rituals that gedun performs)
 
 Rahul approaches him with the goat.
 
@@ -1532,9 +1532,9 @@ Fenny started to cry.
 FENNY
 Mujhe maf krna aap log.
 
-Both make him get up. His face is resisting pain with spills out when they hang him on his horse.
+Both make him get up. His face is resisting pain which spills out when they hang him on his horse.
 
-Rahul captures the picture. From his camera.
+Rahul captures the picture. From his camera.(irony)
 
 EXT. BROWN DESERT. AFTERNOON
 
@@ -1548,7 +1548,7 @@ At the back, a trail of pilgrims measuring themself forward.
 
 Potala palace is visible. This majestic structure looks like the crown of this brown desert.
 
-Rahul smiles and is proud of his accomplishment.
+Rahul face stretches into a smile.
 
 EXT. ENTERANCE GATE. LATER
 
@@ -1565,11 +1565,11 @@ Gedun ji, hame to nahi rokenge ye log.
 
 As usual gedun doesn't reply but for the first time his eyes are alive as a new born.
 
-Our men for no reason sneaked in, the officials bows to gedun. Rahul then takes a peace of breath and smiles at them.
+Our men for no reason sneaks in, the officials bows to gedun. Rahul then takes a peace of breath and smiles at them.
 
 INT. LAHSA MARKET. AFTERNOON
 
-Our men enter the busy market, both-sides, A trail of rag tents lines beside each other, sellers are selling their trading items.
+Our men enter the busy market, both-sides, A trail of rag tents line beside each other, sellers are selling their trading items.
 
 This many people are suddenly overwhelming for rahul. Gedun looks around. Fenny is wheezing.
 
@@ -1585,7 +1585,7 @@ INT. LAHASA. EVENING
 
 The wife and her daughter is preparing food. Gyasto and rahul gently pulls down fenny. He is pale and hungry. They make him lie down on the side.
 
-GEDUN
+GYASTO
 Aakhirkar aap aa he gaye rahul ji.
 
 RAHUL
@@ -1601,7 +1601,7 @@ GYASTO
 Mujhe yakeen nahi hota aapne sath(60) din mai boodh pr ek mota granth likh dala.
 
 RAHUL
-Bas mathpurna tha so ho gya.
+Bas mathvapoorn tha so ho gya.
 
 GYASTO
 Mahan hai aap.
@@ -1676,7 +1676,7 @@ INT. GYASTO'S HOUSE. AFTERNOON
 
 Fenny is surrounded by herbal diyas. A healing lama and his assistant rolls him over onto a belt of thin lopsided wooden belt to adjust his broken spine. They ties the extra rag with a force. Fenny’s frail agonizing voice shriek with painful reactions.
 
-From the front gate a messenger dashes towards the gyasto, who greets him with a smile, he looks at the given letter and throws a grin at rahul as he passes the letter. Rahul grabs it and scans it.
+From the front gate a messenger dashes towards  gyasto, who greets him with a smile, he looks at the given letter and throws a grin at rahul as he passes the letter. Rahul grabs it and scans it.
 
 GYASTO
 Mubarak ho rahul ki, hindustan se lagaw hai dalailama ko, aapki ichha purn hui hai.
@@ -1699,12 +1699,12 @@ Dhanya vad fenny, dhyan rakhna.
 He goes out, nyima comes in, rahul joins Gyasto and healing lama
 
 HEALING LAMA
-Inke bachne ke aasar kam hai. Hamse jitna ho sakta tha hamne kra. Maine jadibuti de di hai uska ras dark mai thodi madat kr sakta hai. Bahki aap dhyan rakhe inka.
+Inke bachne ke aasar kam hai. Hamse jitna ho sakta tha hamne kra. Maine jadibuti de di hai uska ras dard mai thodi madat kr sakta hai. Bahki aap dhyan rakhe inka.
 
 GYASTO
 Ji bilkul, hamare mahmen hai ant tk sath rhenge hm.
 
-The healing lama looks at rahul for his payment. Rahul realizes it, he hoes in his side bag and pulls out a few silver coins. And gives it to him.
+The healing lama looks at rahul for his payment. Rahul realizes it, he goes in his side bag and pulls out a few silver coins. And gives it to him.
 
 INT. LOCAL TEMPLES. MONTAGE
 
