montage and the master monk. stream intrpt

--- a/Meri tibet yatra.fountain
+++ b/Meri tibet yatra.fountain
@@ -1708,9 +1708,9 @@ The healing lama looks at rahul for his payment. Rahul realizes it, he goes in h
 
 INT. LOCAL TEMPLES. MONTAGE
 
-Rahul is furiously treading in, he doesn't care if he is out of breath and his body require water, he wipes his dry lips with his slimy tongue. Gyasto differs and pauses outside to  swing a pot in the water tank. He is really thirsty and gulps down the water in no time.
+Rahul is furiously treading in, he doesn't care if he is out of breath and his body requires water, he wipes his dry lips with his slimy tongue. Gyasto differs and pauses outside to  swing a pot in the water tank. He is really thirsty and gulps down the water in no time.
 
-A lama unlocks the cupboard, jimmying it, before it swings open Behind the golden buddha statue, which it towering few inches above the temple boundary.
+A lama unlocks the cupboard, jimmying it, before it swings open Behind the golden buddha statue, which it towering few inches above the temple boundary. the eyes of the statue is peaking over a vast dry field.(add location info then proceed)
 
 Manically big eyes scans the rusty, musty documents and untidy bowls. Rahul flips through these documents.
 
@@ -1738,7 +1738,7 @@ A semi dark hall, dustless, mythologically painted red pillars supporting the hi
 
 Reflecting on the floor board, In the corner we see a lama is standing unmoving. Hands clenched behind.
 
-An old llama, sitting on a large bench cushioned with red sheets against the half way desk, with some sacred books and ink bottle and small idols of deities unknown to the modern society. He is staring in his eyes, muttering his JAPA and counting the beads of his MALA. His eyes fills with tears.
+An old llama, sitting on a large bench cushioned with red sheets against the half way desk, with some sacred books and ink bottle and small idols of deities unknown to the modern society. He is staring in his eyes, muttering his JAPA and counting the beads of his MALA. 
 
 We see the standing llama is none other then gedun himself whose eyes are flowing with tears.
 
@@ -1774,7 +1774,7 @@ Gedun and him sleeps. In the morning he collects documents and gives the money. 
 
 INT. ANOTHER TEMPLE. DAY
 
-Dharamveer temple, he cries and found the person that prometed bhudis.
+Dharamveer temple, he cries and found the person that prometed bhudis. important. look for in the book.
 
 INT. GYASTO'S HOUSE. AFTERNOON
 
@@ -1798,7 +1798,7 @@ FENNY
 Jinse meri shadi hui hai, meri sangani.
 
 NYIMA
-Aaplog kitne bhai ko.
+Aaplog kitne bhai ho.
 
 FENNY
 Mai he hu, pitaji aur bada bhia vo bagawat mai shaheed ho gye.
@@ -1821,7 +1821,7 @@ Aap apni bewe ko khat kyu nahi likthe.
 FENNY
 Nahi nahi,
 
-Tears flows from her eyes.
+Tear flow from his eyes.
 
 NYIMA
 Kyu.
