--- a/screenplay_inputs.fountain
+++ b/screenplay_inputs.fountain
@@ -22,6 +22,8 @@ CUT TO:
 
 ***this is italic bold***
 
+**visit the code section right after the preview to see whats happening in the back.**
+
 
 
  
