we take fenny to the magical lama, rahul doesnt know how gedun arranged this much money to aid fenny

--- a/Meri tibet yatra.fountain
+++ b/Meri tibet yatra.fountain
@@ -1863,7 +1863,7 @@ Fenny, with swelling throat wants to say something.
 
 Nyima pauses on the exit. She turns back. And knees down affectionately near fenny.
 
-FENNY
+NYIMA
 Mujhe abhi yad aaya, hamare yha pas ke gao ke bade mandir mai ek llama hai ko pichle pandrah salo se bina khye piye dhyan mai hai. Papa btate hai ki jab vo idhar udhar ghumte they to chatmakar kra krte they. Kesi bhi bimari ko sahi kr sakthe they.
 
 FENNY
@@ -1968,7 +1968,7 @@ FENNY
 Theek.
 
 RAHUL
-Kha jis kitab keliye aaya hu, vo khi nahi mil rhi. Khena pdega, tibet kesa bhi ho jya ke log, jhute, makkar, aur rupye aaithne wala hai.
+Kha jis kitab keliye aaya hu, vo khi nahi mil rhi. Khena pdega, tibet kesa bhi ho jya lekin log, jhute, makkar, aur rupye aaithne wala hai.
 
 FENNY
 Meri dristi mai to mujhe jitna sahyog mil rha hai, unke dhanyawad krne ke liye shabd kafi nahi hai.
@@ -1981,7 +1981,7 @@ Mai hath muh dhokr aata hu.
 He gets up.
 
 FENNY
-Aapke likhe kagaz padhe. Itna kuch hua hamare sath, aapne kya likh rakha hai, kha kharch hua hai ye vese hota hai, ghoda ya vha milta hai, kese yvyao ko kasrat krni chaiye.
+Aapke likhe kagaz padhe. Itna kuch hua hamare sath, aapne kya likh rakha hai, kha kharch hua hai ye vese hota hai, ghoda ya vha milta hai, kese yuvao ko kasrat krni chaiye.
 
 RAHUL
 To aap likhlejiye agar itna he kuch hua hai.
@@ -2093,7 +2093,7 @@ Ha. To kl savare he chalna pdeaga.
 Gedun come close to whisper in rahul’s ear.
 
 GEDUN
-Kl sham tk ke hi zindagi hai inka.
+Kl sham tk ke hi zindagi hai inki.
 
 RAHUL
 (whispers) aapko kese pta.
@@ -2105,7 +2105,7 @@ FENNY
 Aapko koi aatraiz nahi rahuj ki.(frail As usual)
 
 RAHUL
-Fenny aap saye nahi abhi tak.
+Fenny aap soye nahi abhi tak.
 
 FENNY
 Vakt he kitna bacha hai mere pas, neend to ud he gyi hai.
@@ -2199,7 +2199,7 @@ EXT. GYASTO'S HOUSE. DAY
 
 Gedun, gyando, rahul carrying fenny on their shoulder  as if taking the dead. Gyando has the horses, three of them with loaded bags.
 
-Dissolve: rahul is taking water, passing it to gedun. They put down fenny feed him some water.
+Dissolve: rahul is taking water, passing it to gedun. They put down fenny, feed him some water.
 
 RAHUL
 Gedun ji, mera puchna banta to nahi hai magar mai bhi is mandli ka hissa hu to kya aap bta sakte hai ki mudraye kha se laye.
@@ -2244,7 +2244,7 @@ Gedun takes a big step toward the boy, the people around gathers around him. Ged
 
 The gathering starts clapping to cast out evil that is rahul. Gedun starts to laugh.
 
-A man dashes to the feat of gedun.
+A man dashes to the feet of gedun.
 
 GEDUN
 Are utho.
@@ -2313,7 +2313,7 @@ Mudrye aasai he samye kam aati hai.
 GEDUN
 Rahul ji magar..
 
-Another man approaches and bows down.(reffer The book)
+Another man approaches and bows down.(reffer The book)(maybe the death ritual)
 
 He did the process gedun. Tea and shit.
 
