rahul pleading to the newly drunk degun

--- a/Meri tibet yatra.fountain
+++ b/Meri tibet yatra.fountain
@@ -2334,7 +2334,7 @@ Vultures are soaring high in the sun.
 EXT. MONASTERY STAIRS. AFTERNOON
 
 RAHUL
-Gyando ka hai.
+Gyando kha hai.
 
 GEDUN
 Chalo vo uppar he hoyenge.
@@ -2375,7 +2375,7 @@ DISSOLVE TO:
 
 EXT. MONASTERY. AFTERNOON
 
-Gedun restless and frowning face emerges at the top, he is breathless and angry. Fenny seems dead. Rahul is coughing because of thin hear, he is breathless his heart throbbing in his chest, his stomach is inflating and deflating like a huge balloon they put fenny down. And rahul falls down on the dirt floor, sun don’t bother him much now, his body is playing new games with him, the pinnacle of tiredness made him really want to die. He looks at the cliff and he think to just jump.
+Gedun restless and frowning face emerges at the top, he is breathless and angry. Fenny seems dead. Rahul is coughing because of thin air, he is breathless his heart throbbing in his chest, his stomach is inflating and deflating like a huge balloon they put fenny down. And rahul falls down on the dirt floor, sun don’t bother him much now, his body is playing new games with him, the pinnacle of tiredness made him really want to die. He looks at the cliff and he think to just jump.
 
 Gyando comes out with a assistant.
 
@@ -2520,7 +2520,7 @@ Vo sun nahi sakte.
 He turns to gyando and falls on his feet.
 
 FENNY
-Llama ji, kripa kre, mujhe janna hai, aapke sevak ke roop mai mujhe rakh lijiye, mai pura jeevan aapka das bankr rahunga, kripa krkr llama ji se mujhe dikshit hrayiea.
+Llama ji, kripa kre, mujhe janna hai, aapke sevak ke roop mai mujhe rakh lijiye, mai pura jeevan aapka das bankr rahunga, kripa krkr llama ji se mujhe dikshit krayiea.
 
 GYANDO
 Mujhe pta hai aapko ek adhyatmic anubhav hua hia, magar jiss uchh kisam ka tap chaiye vo har kisi ke baski nahi hota.
@@ -2572,7 +2572,7 @@ Gyando closes the large enterance before him, when the door is closed with at th
 
 Fenny looses his body he seems hopeless.
 
-Gedun moves aside, rahul and fenny are gasping for air, the sin is at the horizon, when fenny turns and punches rahul on his face.
+Gedun moves aside, rahul and fenny are gasping for air, the sun is at the horizon, when fenny turns and punches rahul on his face.
 
 With a bloodied nose rahul steps back, fenny plunges his fist in rahul’s stomach.
 
@@ -2590,7 +2590,7 @@ FENNY
 Chand rupiyo ke kimat meri jan se jyada laga di.
 
 RAHUL
-To hai he isi layak, photographer raya hai, nikhet nihant chutiye bhej jiya anand ji na, na kam ka na dham ka.
+To hai he isi layak, photographer aya hai, nikhet nihant chutiye bhej jiya anand ji na, na kam ka na dham ka.
 
 Rahul grabs him and punches his face.
 
@@ -2604,7 +2604,7 @@ Tumhara charitra pta hai mujhe, grantho ko dhundne se pelhe randiyo ka bazar kho
 
 Rahul panics and gets angry.
 
-FENNY
+GEDUN
 Fenny ab bas kro, dekho tum sahi ho gye ho, aur bina rahul ji ke ye mumkin nahi tha. Maf krna rahul ji magar maine aapki mudraye chura kr fenny babu ke illaj mai laga di.
 
 Rahul flick himself forward and watches gedun in disbelief.
@@ -2655,7 +2655,7 @@ RAHUL
 Maine to kuch nahi kra mahashye.
 
 THE MAN
-Aap unhi ke mitra hai, ham unke bhakat. Jo swam bhag ka mitra ho vo khud kam divya nahi hota. Kripa krkr hamara vrat tudvye.
+Aap unhi ke mitra hai, ham unke bhakat. Jo swam bhagwan ka mitra ho vo khud kam divya nahi hota. Kripa krkr hamara vrat tudvye.
 
 RAHUL
 Chalo theek hai. Bhojan karvyenge na.
@@ -2676,7 +2676,7 @@ The monk and the guru of gedun is muttering his chant. Fenny’s tearing standin
 The monk pauses and puts his mala on the side.
 
 MONK
-Mai dekh rha hu ki 150 mudra churane mai tumhara man ek shan ke liye bhi nahi thitka. Kyu sahi bol rha hu na.
+Mai dekh rha hu ki 150 mudra churane mai tumhara man ek shan ke liye bhi nahi thitka. Kyu sahi bol rha hu na gedun.
 
 Gedun stands silent with a little smile on his face.
 
@@ -2805,7 +2805,7 @@ GEDUN
 Aur gye ghans charne gyi hogi, aur achi ghani ghans hai nadi kinare, to dimak lagao to zahir ho jata hai ki gye kha gyi hogi, mahaj tukka mara tha mene.
 
 RAHUL
-Aur vo insaan ho aapke path k bad guzur gya.
+Aur vo insaan jo aapke path ke bad guzur gya.
 
 GEDUN
 Vo kitne mahino se aas laga kr baitha hoga ki koi llama use path sunaye jo ki bahut kam hota hai, vo use mil gya mano use sab milgya ho, usne sab pa liya to fir uske yha rhene ke koi vajhe nahi bachi rhi hogi aur vo khushi khushi mar gya hoga. Aur vese bhi maine path isliye kra kyuki hame rhene ki jaghe mil sake.
