second draft is done

--- a/Meri tibet yatra.fountain
+++ b/Meri tibet yatra.fountain
@@ -2865,13 +2865,13 @@ Jaiye, isi gao mai ek khandar sa ghar hai, haddiyo se bna hai, sadio se dar ke m
 Rahul kisses gedun feet, gedun is startled.
 
 RAHUL
-Dhanya vad, lama ji, dhanya vad, mai aapka sadev aphari rahunga.
+Dhanya vad, lama ji, dhanya vad, mai aapka sadev abhari rahunga.
 
 He nervously laughs.
 
 EXT. BONE HOUSE. EVENING
 
-The town gathers in-front of it feared what will happen to him. They stands in a protection spell, few lower rank monk are chanting mantras.
+The town gathers in-front of it fearing what will happen to him. They stands in a protection spell, few lower rank monk are chanting mantras.
 
 Rahul looks back at gedun and bows down for blessing, gedun is awkward and hides behind fenny and take a gulp of his whiskey.
 
@@ -2879,7 +2879,7 @@ Rahul hammers the front sill of the gate, it cracks, rahul gives it a push but i
 
 The dust settles, people are peaking in form the distance but the darkness is still their.
 
-He looks around, handing real hands and heads are adorning the bone wall and layers of documents and ancient books are there. He scan through them furiously.
+He looks around, hanging real hands and heads are adorning the bone wall and layers of documents and ancient books are there. He scan through them furiously.
 
 People are waiting outside.
 
@@ -2948,7 +2948,7 @@ Gedun is struggling in his thoughts, flashes of his divination are running troug
 
 He looks at rahul and fenny sleeping.
 
-(this is a story of truth and lies)
+
 
 EXT. TOWN. NIGHT
 
@@ -2984,8 +2984,10 @@ Jhut bolna aur sach chipana dono mai bahut antar hai.
 They laughs.
 
 EXT. HARSH TERRAIN. DAY
+we have to add another scene where he has at least 3 large bags of documents whis he bought. and he has few horses and a horse man.
 
-Rahul is alone with his horse. He encounter a group of Tibet daku he fires a shit sitting on his horse, the horse whines.
+Rahul is with his horses snd his horse men. He encounter a group of Tibet daku he fires a shit sitting on his horse, the horse whines.
+Use v.o to make the sense of this quick ending montage.
 
 EXT. THE LITTLE DOG GRAVE.
 
@@ -3004,6 +3006,7 @@ INT. UNKNOWN ROOM.
 Rahul pass on the document to the archeologist the book, and the archeologist puts money on the table, a lot one can get. But he rejects it.
 
 Dip to black.
+.....................
 
 INT. CLASS ROOM.
 
